--- a/index_layout_01.html
+++ b/index_layout_01.html
@@ -56,90 +56,19 @@
 										</ul>
 									</li>
 									<li class="mega-col-nav"><a href="#" title="">О нас </a>
-										<div class="product-menu">
-											<div class="nav-child">
-												<div class="row">
-													<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-														<div class="mega-inner">
-															<h2>INFORMATION</h2>
-															<ul>
-																<li><a href="#"><i class="fa fa-caret-right "></i>About us</a></li>
-																<li><a href="#"><i class="fa fa-caret-right"></i>Delivery Information</a></li>
-																<li><a href="#"><i class="fa fa-caret-right"></i>Privaci & Policy</a></li>
-																<li><a href="#"><i class="fa fa-caret-right"></i>Terms & Conditions</a></li>
-																
-															</ul>
-														</div>
-													</div>
-													<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-														<div class="mega-nav">
-															<h2>INFORMATION</h2>
-															<ul>
-																<li><a href="#"><i class="fa fa-caret-right " ></i>О нас</a></li>
-																<li><a href="#"><i class="fa fa-caret-right" ></i>Delivery Information</a></li>
-																<li><a href="#"><i class="fa fa-caret-right"></i>Privaci & Policy</a></li>
-																<li><a href="#"><i class="fa fa-caret-right" ></i>Terms & Conditions</a></li>
-																
-															</ul>
-														</div>
-													</div>
-													<div class="col-lg-6 top">
-														<div class="custom-block">
-															<img src="images/media/banner/block-(5).jpg" alt="">
-															<div class="banner-nav">
-																<h3>CUSTOM BLOCK</h3>
-															</div>
 
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
 									</li>
 									<li><a href="#" title="">Вендоры</a>
-										<ul>
-											<li><a href="#">Louis Vuitton (LV)</a></li>
-											<li><a href="#"> Chanel</a></li>
-											<li><a href="#">Lana Marks</a></li>
-											<li><a href="#"> Mouawad</a></li>
-											<li><a href="#">Marc Jacobs</a></li>
-											<li><a href="#">Dior</a></li>
-											<li><a href="#"> Hermes</a></li>
-										</ul>
+
 									</li>
 									<li><a href="#" title="">Акции</a>
-										<ul>
-											<li><a href="contact_page.html">Contact Us</a></li>
-											<li><a href="#">FAQs</a></li>
-											<li><a href="#">404 Error</a></li>
-											<li><a href="#">Popup</a></li>
-											<li><a href="#">Login / Register</a></li>
 
-										</ul>
 									</li>
 									<li><a href="#" title="">Новости</a>
-										<ul>
-											<li><a href="shop_full_width_6col.html">Shop - Full width 6</a></li>
-											<li><a href="shop_full_width_4col.html">Shop - Full width 4</a></li>
-											<li><a href="shop_grid_left_sidebar.html">Shop - grid-Left sidebar</a></li>
-											<li><a href="shop_grid_right_sidebar.html">Shop - grid - Right sidebar</a></li>
-											<li><a href="shop_list_left_sidebar.html">Shop - list - Left sidebar</a></li>
-											<li><a href="shop_list_right_sidebar.html">Shop - list - Right sidebar</a></li>
-											<li><a href="product_single_post.html">Single product</a></li>
-											<li><a href="shopping_cart.html">Shop Cart</a></li>
-											<li><a href="checkout_page.html">Shop Checkout</a></li>
-										</ul>
+
 									</li>
 									<li><a href="#" title="">Партнерам</a>
-										<ul>
-											<li><a href="#">New Balance</a></li>
-											<li><a href="#"> Converse</a></li>
-											<li><a href="#">Lana Marks</a></li>
-											<li><a href="#"> Mouawad</a></li>
-											<li><a href="#">Marc Jacobs</a></li>
-											<li><a href="#">Reebok</a></li>
-											<li><a href="#"> Hermes</a></li>
-										</ul>
+
 									</li>
 									<li><a href="contact_page.html" title="">Контакты</a></li>
 								</ul>
@@ -163,40 +92,40 @@
 							<li class="f_left" data-transition="cube" data-slotamount="7" data-custom-thumb="images/media/slider/slide-1.png">
 								<img src="images/1096.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
 								<div class="caption lft ltt title_top" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<p><span class="slider-top"> NEW ARRIVAL </span></p>
+									<p><span class="slider-top"> Распродажа </span></p>
 								</div>
 								<div class="caption lft ltt title_none" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<h2>NEW SMARTPHONE CASE RELEASED</h2>
+									<h2>Разместите тут краткое описание вашего спецпредложения</h2>
 								</div>
 								<div class="caption sfb stb color_light slider_title tt_uppercase t_align_c" data-x="center" data-y="246" data-speed="1000" data-easing="ease" data-start="2500"><div class="color_dark" ><p> 20.08.2014 </p> </div></div>
 								<a href="#" class="slide_check caption sfb stb color_light" data-x="center" data-y="352" data-speed="1000" data-start="2900">
-									CHECK IT OUT
+									я заинтересован
 								</a>
 							</li>
 							<li class="f_left" data-transition="cube" data-slotamount="7" data-custom-thumb="images/media/slider/slide-2.png">
 								<img src="images/1219.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
 								<div class="caption lft ltt title_top" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<p><span class="slider-top"> NEW ARRIVAL </span></p>
+									<p><span class="slider-top"> Спецпредложение </span></p>
 								</div>
 								<div class="caption lft ltt title_none" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<h2>NEW SMARTPHONE CASE RELEASED</h2>
+									<h2>Разместите тут краткое описание вашего спецпредложения</h2>
 								</div>
 								<div class="caption sfb stb color_light slider_title tt_uppercase t_align_c" data-x="center" data-y="246" data-speed="1000" data-easing="ease" data-start="2500"><div class="color_dark" ><p> 20.08.2014 </p> </div></div>
 								<a href="#" class="slide_check caption sfb stb color_light" data-x="center" data-y="352" data-speed="1000" data-start="2900">
-									CHECK IT OUT
+                                    я заинтересован
 								</a>
 							</li>
 							<li class="f_left" data-transition="cube" data-slotamount="7" data-custom-thumb="images/media/slider/slide-3.png">
 								<img src="images/739.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
 								<div class="caption lft ltt title_top" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<p><span class="slider-top"> NEW ARRIVAL </span></p>
+									<p><span class="slider-top"> Новинки </span></p>
 								</div>
 								<div class="caption lft ltt title_none" data-x="center" data-y="58" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
-									<h2>NEW SMARTPHONE CASE RELEASED</h2>
+									<h2> Новинки от мировых брендов</h2>
 								</div>
 								<div class="caption sfb stb color_light slider_title tt_uppercase t_align_c" data-x="center" data-y="246" data-speed="1000" data-easing="ease" data-start="2500"><div class="color_dark" ><p> 20.08.2014 </p> </div></div>
 								<a href="#" class="slide_check caption sfb stb color_light" data-x="center" data-y="352" data-speed="1000" data-start="2900">
-									CHECK IT OUT
+                                    я заинтересован
 								</a>
 							</li>
 						</ul>
@@ -206,32 +135,7 @@
 			</div>
 			<!-- main content -->
 			<section class="main-content">
-				<div class="policy-v1 ">
-					<div class="container">
-						<div class="row row-gutter-10">
-							<div class="col-sm-4">
-								<div class="policy-item">
-									<h3>Доставка</h3>
-									<span> Бесплатно по городу</span>
-								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="policy-item mid">
-									<h3>Распродажа</h3>
-									<span>от 50% </span>
-								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="policy-item ">
-									<h3>
-										Скидки
-									</h3>
-									<span>От 40%</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+
 				<div class="top-contten">
 					<div class="container">
 						<div class="row">
@@ -256,8 +160,8 @@
 				<div id="tabs-1" class="sp-contten wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="200ms">
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
-								<div id="owl-demo-tabs" class="owl-carousel">
+							<div class="col-lg-3 col-md-3 col-sm-12">
+
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -281,6 +185,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -304,6 +210,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -328,6 +236,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -352,6 +262,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -376,6 +288,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -400,6 +314,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -424,6 +340,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -448,16 +366,16 @@
 											</div>
 										</div>
 									</div>
-								</div>
+                            </div>
 							</div>
 						</div>
 					</div>
-				</div>
+
+
 				<div id="tabs-2" class="sp-contten active wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="200ms">
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
-								<div id="owl-demo" class="owl-carousel">
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -482,6 +400,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -506,6 +426,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -530,6 +452,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -554,6 +478,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -578,6 +504,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -602,6 +530,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -626,6 +556,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -650,6 +582,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -674,6 +608,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 
 									<div class="item" >
 										<div class="product-image">
@@ -700,17 +636,16 @@
 											</div>
 										</div>
 									</div>
-								</div>
-							</div>
+                            </div>
+
+
 						</div>
 					</div>
 				</div>
 				<div id="tabs-3" class="sp-contten wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="200ms">
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
-
-								<div id="owl-demo-tabs-3" class="owl-carousel">
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -735,6 +670,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -759,6 +696,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -783,6 +722,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -807,6 +748,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -831,6 +774,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -855,6 +800,8 @@
 											</div>
 										</div>
 									</div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12">
 									<div class="item" >
 										<div class="product-image">
 											<div class="image">
@@ -879,40 +826,29 @@
 											</div>
 										</div>
 									</div>
-								</div>
+                            </div>
 							</div>
 						</div>
 					</div>
-				</div><!--  end sp-contten -->
+				<!--  end sp-contten -->
 				<div class="banner-content">
 					<div class="container">
 						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+							<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 								<div class="left-banner wow fadeInUp" data-wow-duration="0.5s">
 									<div class="img-eff">
-										<img src="images/3248.jpg" alt="">
-										<h3>BACKPACK</h3>
-										<p>COLLECTION</p>
-
+										<img src="images/6012.jpg" alt="">
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+							<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 								<div class="right-banner wow fadeInUp" data-wow-duration="0.5s">
 									<div class="top-banner">
-										<div class="img-eff">
-											<a href="#"><img src="images/3248.jpg" alt=""></a>
-											<h3>WATCHES</h3>
-											<p>COLLECTION</p>
-										</div>
+                                     <h3> О КОМПАНИИ</h3>
+<P> ООО "СИСТЕМА КВАНТ"  работает на рынке бытовой техники более двадцати пяти лет. Мы занимаемся как оптовыми поставками, так и розничной продажей. Залогом успешной работы нашей компании на рынке являются отлаженные дилерские отношения с ведущими производителями. В ассортименте компании представлено более 3000 наименований товаров. </P>
+
 									</div>
-									<div class="bottom-banner wow fadeInUp" data-wow-duration="0.5s">
-										<div class="img-eff">
-											<a href="#"><img src="images/20.jpg" alt=""></a>
-											<h3>CAMERA</h3>
-											<p>ACCESSORIES</p>
-										</div>
-									</div>
+
 								</div>
 							</div>
 						</div>
